@@ -38,6 +38,7 @@
 - Fix: Successfully installed and enrolled agent running standalone{pull}[24128]24128
 - Make installer atomic on windows {pull}[24253]24253
 - Remove installed services on agent uninstall {pull}[24151]24151
+- Fix windows installer during enroll {pull}[24343]24343
 
 ==== New features
 
